# agent-factory

./: .gitignore  CLAUDE.md  NOW.md  alembic.ini  demo.py  plan.md  pyproject.toml  requirements.md
.github/workflows/: backend-tests.yml
backend/app/: __init__.py  main.py
backend/app/agent_runtime/: README.md  __init__.py  brain.py  models.py  runtime.py
backend/app/api/: deps.py  routes.py
backend/app/core/: config.py
backend/app/db/: init_db.py  session.py
backend/app/models/: README.md  tables.py
backend/app/schemas/: __init__.py  agent_spec.py  approval.py  common.py  export_json_schemas.py  heartbeat.py  memory.py  run.py  schedule.py  task.py  tool.py
backend/app/services/: llm_client.py  repository.py  runtime.py  sqlalchemy_repository.py  task_runner.py  vector_store.py  web_search.py
backend/app/templates/: __init__.py  builtin_agents.py
backend/tests/: test_alembic_revisions.py  test_api_runtime.py  test_autonomous_runtime.py  test_heartbeat_api.py  test_heartbeat_runtime.py  test_heartbeat_sqlalchemy.py  test_phase0_models.py  test_sqlalchemy_repository.py
docs/: architecture.md  database.md  postgres.md  runtime.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
specs/: README.md  agent_run.schema.json  agent_spec.schema.json  approval.schema.json  memory.schema.json  schedule.schema.json  skill.schema.json  task.schema.json  tool.schema.json  tool_call.schema.json
storage/alembic/: env.py
storage/migrations/: 0001_phase0_schema.sql  0002_agent_heartbeat_states.sql
(+28 files in other folders)
